# turbo-monorepo-example

./: .gitignore  README.md  package.json  turbo-monorepo.code-workspace
apps/backend/: manage.py  package.json  pyproject.toml
apps/backend/mf/backend/: __init__.py  settings.py  urls.py  wsgi.py
apps/backend/mf/backend/core/: apps.py  views.py
